--- a/index.html
+++ b/index.html
@@ -5,29 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link href="./css/styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        <a href="">WebStudio</a>
+        <a class="logo" href="./index.html"><span class="accent">Web</span>Studio</a>
         <nav>
-        <ul>
-            <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+        <ul class="site-nav list">
+            <li><a class="site-link" href="./index.html">Студия</a></li>
+            <li><a class="site-link" href="./portfolio.html">Портфолио</a></li>
+            <li><a class="site-link" href="">Контакты</a></li>
         </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="site-nav list">
+            <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h1>Эффективные решения <br> для вашего бизнеса</h1>
+                <button class="button primary" type="button">Заказать услугу</button>
         </section>
-    <section>
-        <ul>
+    <section class="section">
+        <ul class="list qualities">
             <li>
                 <h3>Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -46,9 +49,9 @@
             </li>
         </ul>
     </section>
-    <section>
+    <section class="section">
         <h2>Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list">
             <li>
                 <img src="./images/img.jpg" alt="Верстка" width="294"/>
             </li>
@@ -60,9 +63,9 @@
             </li>
         </ul>
     </section>
-        <section>
+        <section class="section team">
             <h2>Наша команда</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/img-4.jpg" alt="Игорь Демьяненко" width="260"/>
                     <h3>Игорь Демьяненко</h3>
@@ -85,16 +88,16 @@
                 </li>
             </ul>
         </section>
+        </main>
         <footer>
-            <a href="">WebStudio</a>
-            <address>
+            <a class="logo studio" href="./index.html"><span class="accent">Web</span>Studio</a>
+            <address class="adress">
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
-                <ul>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <ul class="contact list">
+                    <li><a class="link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="link-footer" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </footer>
-        </main>   
 </body>
 </html>
