--- a/portfolio.html
+++ b/portfolio.html
@@ -4,100 +4,95 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebStudio</title>
-    <link href="./css/styles.css" rel="stylesheet"
+    <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link href="./css/styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        <a href="" class="logo">WebStudio</a>
+        <a class="logo" href="./index.html"><span class="accent">Web</span>Studio</a>
         <nav>
-        <ul class="site-nav">
-            <li><a href="" class="link">Студия</a></li>
-            <li><a href="" class="link">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
-        </ul>
+            <ul class="site-nav list">
+                <li><a class="site-link" href="./index.html">Студия</a></li>
+                <li><a class="site-link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="site-link" href="">Контакты</a></li>
+            </ul>
         </nav>
-        <ul class="site-adress">
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        <ul class="site-nav list">
+            <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-        <section class="section-hero">
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <form>
-                <button type="button">Заказать услугу</button>
-            </form>
+        <section class="filter">
+            <ul class="list">
+                <li><button class="button" type="button">Все</button></li>
+                <li><button class="button secondary" type="button">Веб-сайты</button></li>
+                <li><button class="button secondary" type="button">Приложения</button></li>
+                <li><button class="button secondary" type="button">Дизайн</button></li>
+                <li><button class="button secondary" type="button">Маркетинг</button></li>
+            </ul>
         </section>
-    <section class="section-title">
-        <ul>
-            <li>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
-            <li>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li>
-            <li>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
-            <li>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>
-        </ul>
-    </section>
-    <section class="section-title">
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-            <li>
-                <img src="./images/img.jpg" alt="Верстка" width="294"/>
-            </li>
-            <li>
-                <img src="./images/img-2.jpg" alt="Макеты" width="294"/>
-            </li>
-            <li>
-                <img src="./images/img-3.jpg" alt="Дизайн" width="294"/>
-            </li>
-        </ul>
-    </section>
-        <section class="section-title">
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="section project">
+            <ul class="list">
                 <li>
-                    <img src="./images/img-4.jpg" alt="Игорь Демьяненко" width="260"/>
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <img src="./images/img-8-2.jpg" alt="Технокряк" width="370"/>
+                    <h3>Технокряк</h3>
+                    <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/img-5.jpg" alt="Ольга Репина" width="260"/>
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <img src="./images/img-9-2.jpg" alt="Постер New Orlean vs Golden Star" width="370"/>
+                    <h3>Постер New Orlean vs Golden Star</h3>
+                    <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/img-6.jpg" alt="Николай Тарасов" width="260" />
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <img src="./images/img-10-2.jpg" alt="Ресторан Seafood" width="370"/>
+                    <h3>Ресторан Seafood</h3>
+                    <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/img-7.jpg" alt="Михаил Ермаков" width="260" />
-                    <h3>Михаил Ермаков</h3>
-                        <p>UI Designer</p>
+                    <img src="./images/img-11-2.jpg" alt="Проект Prime" width="370"/>
+                    <h3>Проект Prime</h3>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/img-12-2.jpg" alt="Проект Boxes" width="370"/>
+                    <h3>Проект Boxes</h3>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/img-13-2.jpg" alt="Inspiration has no Borders" width="370"/>
+                    <h3>Inspiration has no Borders</h3>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/img-14-2.jpg" alt="Издание Limited Edition" width="370"/>
+                    <h3>Издание Limited Edition</h3>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/img-15-2.jpg" alt="Проект LAB" width="370"/>
+                    <h3>Проект LAB</h3>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/img-16-2.jpg" alt="Growing Business" width="370"/>
+                    <h3>Growing Business</h3>
+                    <p>Приложение</p>
                 </li>
             </ul>
         </section>
+        </main>
         <footer>
-        <a href="">WebStudio</a>
-        <address>
-            <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+            <a class="logo studio" href="./index.html"><span class="accent">Web</span>Studio</a>
+            <address class="adress">
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
+                <ul class="contact list">
+                    <li><a class="link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="link-footer" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
         </footer>
-        </main> 
 </body>
 </html>
