--- a/portfolio.html
+++ b/portfolio.html
@@ -14,28 +14,27 @@
         <a class="logo" href="./index.html"><span class="accent">Web</span>Studio</a>
         <nav>
             <ul class="site-nav list">
-                <li><a class="site-link" href="./index.html">Студия</a></li>
-                <li><a class="site-link" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="site-link" href="">Контакты</a></li>
+                <li><a class="site-link link" href="./index.html">Студия</a></li>
+                <li><a class="site-link current link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="site-link link" href="">Контакты</a></li>
             </ul>
         </nav>
         <ul class="site-nav list">
-            <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-        <section class="filter">
+        <section class="Portfolio">
+            <h1>Портфолио</h1>
             <ul class="list">
-                <li><button class="button" type="button">Все</button></li>
-                <li><button class="button secondary" type="button">Веб-сайты</button></li>
-                <li><button class="button secondary" type="button">Приложения</button></li>
-                <li><button class="button secondary" type="button">Дизайн</button></li>
-                <li><button class="button secondary" type="button">Маркетинг</button></li>
+                <li><button class="portfolio-btn current" type="button">Все</button></li>
+                <li><button class="portfolio-btn" type="button">Веб-сайты</button></li>
+                <li><button class="portfolio-btn" type="button">Приложения</button></li>
+                <li><button class="portfolio-btn" type="button">Дизайн</button></li>
+                <li><button class="portfolio-btn" type="button">Маркетинг</button></li>
             </ul>
-        </section>
-        <section class="section project">
-            <ul class="list">
+             <ul class="project-list list">
                 <li>
                     <img src="./images/img-8-2.jpg" alt="Технокряк" width="370"/>
                     <h3>Технокряк</h3>
@@ -85,12 +84,12 @@
         </section>
         </main>
         <footer>
-            <a class="logo studio" href="./index.html"><span class="accent">Web</span>Studio</a>
+            <a class="logo" href="./index.html"><span class="accent">Web</span>Studio</a>
             <address class="adress">
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
                 <ul class="contact list">
-                    <li><a class="link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="link-footer" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li><a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </footer>
