--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
         <a class="logo" href="./index.html"><span class="accent">Web</span>Studio</a>
         <nav>
         <ul class="site-nav list">
-            <li><a class="site-link" href="./index.html">Студия</a></li>
-            <li><a class="site-link" href="./portfolio.html">Портфолио</a></li>
-            <li><a class="site-link" href="">Контакты</a></li>
+            <li><a class="site-link current link" href="./index.html">Студия</a></li>
+            <li><a class="site-link link" href="./portfolio.html">Портфолио</a></li>
+            <li><a class="site-link link" href="">Контакты</a></li>
         </ul>
         </nav>
         <ul class="site-nav list">
-            <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
         <section class="hero">
-            <h1>Эффективные решения <br> для вашего бизнеса</h1>
-                <button class="button primary" type="button">Заказать услугу</button>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+                <button class="button" type="button">Заказать услугу</button>
         </section>
-    <section class="section">
-        <ul class="list qualities">
+    <section class="section qualities">
+        <ul class="list">
             <li>
                 <h3>Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -90,12 +90,12 @@
         </section>
         </main>
         <footer>
-            <a class="logo studio" href="./index.html"><span class="accent">Web</span>Studio</a>
+            <a class="logo" href="./index.html"><span class="accent">Web</span>Studio</a>
             <address class="adress">
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
                 <ul class="contact list">
-                    <li><a class="link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="link-footer" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li><a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </footer>
